--- a/static/style.css
+++ b/static/style.css
@@ -2,8 +2,19 @@ main{
     margin: 185px 0;
 }
 
+div.img-thumbnail{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 90%;
+    padding: 4rem;
+}
+
 @media only screen and (max-width: 600px) {
     main{
         margin: 140px 0;
+    }
+
+    div.img-thumbnail{
+        padding: 3rem;
     }
 }
