--- a/static/style.css
+++ b/static/style.css
@@ -22,3 +22,11 @@ div.img-thumbnail{
 .nps .btn.btn-sm{
     padding: .25rem 0.55rem;
 }
+
+.nps-label .form-check-label{
+    width: 13px;
+}
+
+.btn-primary{
+    background-color: #003676;
+}
